--- a/Model/Model.csproj
+++ b/Model/Model.csproj
@@ -6,7 +6,11 @@
 
   <ItemGroup>
     <Folder Include="Base\" />
-    <Folder Include="Out\User\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Mvc.Abstractions" Version="2.2.0" />
+    <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
   </ItemGroup>
 
 </Project>
