--- a/Service/Service.csproj
+++ b/Service/Service.csproj
@@ -5,10 +5,8 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="Implement\" />
-  </ItemGroup>
-
-  <ItemGroup>
+    <ProjectReference Include="..\Common\Common.csproj" />
+    <ProjectReference Include="..\Dao\Dao.csproj" />
     <ProjectReference Include="..\Model\Model.csproj" />
   </ItemGroup>
 
