--- a/Common/Common.csproj
+++ b/Common/Common.csproj
@@ -14,4 +14,8 @@
     <PackageReference Include="StackExchange.Redis" Version="2.1.30" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Model\Model.csproj" />
+  </ItemGroup>
+
 </Project>
