--- a/warehousemgr/warehousemgr.csproj
+++ b/warehousemgr/warehousemgr.csproj
@@ -6,12 +6,20 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Content Remove="Configs\progress.json" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Mvc.Razor.RuntimeCompilation" Version="3.1.3" />
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="3.1.2" />
   </ItemGroup>
 
   <ItemGroup>
     <Folder Include="Pages\Stock\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Include="Configs\progress.json" />
   </ItemGroup>
 
   <ItemGroup>
